k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: k8s-app
  labels:
    app.kubernetes.io/name: app
    app.kubernetes.io/component: backend
spec:
  selector:
    app.kubernetes.io/name: app
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
